Fix github link text

--- a/markup/molecules/_action.jade
+++ b/markup/molecules/_action.jade
@@ -1,4 +1,4 @@
 .action
 	include ./_download.jade
-	+button_primary('https://github.com/hugeinc/styleguide', public._data.commonTerms.downloadZip[language], '_blank')
+	+button_primary('https://github.com/hugeinc/styleguide', public._data.commonTerms.repository[language], '_blank')
 	+button_primary('http://hugeinc.github.io/styleguide/demo/index.html', public._data.commonTerms.demo[language], '_blank')
